defined required Django Forms

--- a/NutriData/NutriData/templates/aspire/saved.html
+++ b/NutriData/NutriData/templates/aspire/saved.html
@@ -1,3 +1,11 @@
+<!-- 
+    Django Forms
+        button to star a recipe
+        button to create a folder
+        create folder text field that accept the name of the folder
+        add recipe to folder button
+ -->
+
 {% extends 'base.html' %}
 {% block content %}
     <p>saved<p>
