--- a/NutriData/NutriData/templates/aspire/login.html
+++ b/NutriData/NutriData/templates/aspire/login.html
@@ -1,3 +1,8 @@
+<!-- 
+    Django Forms
+        2 text input forms accept username and password 
+-->
+
 {% extends 'base.html' %}
 {% block content %}
     <p>login<p>
