--- a/NutriData/NutriData/templates/aspire/login.html
+++ b/NutriData/NutriData/templates/aspire/login.html
@@ -3,7 +3,15 @@
         2 text input forms accept username and password 
 -->
 
-{% extends 'base.html' %}
-{% block content %}
-    <p>login<p>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>login</p>
+</body>
+</html>
