--- a/NutriData/NutriData/templates/aspire/index.html
+++ b/NutriData/NutriData/templates/aspire/index.html
@@ -1,6 +1,7 @@
  <!-- no django forms required -->
 
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="s005">
     <form>
