--- a/NutriData/NutriData/templates/aspire/login.html
+++ b/NutriData/NutriData/templates/aspire/login.html
@@ -2,6 +2,7 @@
     Django Forms
         2 text input forms accept username and password 
 -->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
