--- a/NutriData/NutriData/templates/aspire/register.html
+++ b/NutriData/NutriData/templates/aspire/register.html
@@ -1,6 +1,8 @@
 <!-- no django forms required -->
 
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
     <p>register<p>
 {% endblock %}
