--- a/NutriData/NutriData/templates/base.html
+++ b/NutriData/NutriData/templates/base.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name=“author” content=“colorlib.com”>
+    <link href=“https://fonts.googleapis.com/css?family=Poppins:400,800” rel=“stylesheet” />
+    <link href=“https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css” rel=“stylesheet” integrity=“sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi” crossorigin=“anonymous”>
+    <link href=“{% static 'admin/css/main.css' %}” rel=“stylesheet” />
 </head>
 <body>
     {% block content%}
