more JS updates

--- a/NutriData/NutriData/templates/aspire/saved.html
+++ b/NutriData/NutriData/templates/aspire/saved.html
@@ -172,7 +172,7 @@
       </fieldset>
     </form>
   </div>
-  <script src="js/extention/choices.js"></script>
+  <script src="{% static 'admin/js/extention/choices.js'%}"></script>
   <script>
     var textPresetVal = new Choices('#choices-text-preset-values',
     {
