index background and favicon

--- a/NutriData/NutriData/templates/aspire/index.html
+++ b/NutriData/NutriData/templates/aspire/index.html
@@ -7,7 +7,7 @@
 
  <style>
      .index-background {
-     background-image: url("{% static 'admin/img/bg_image.svg'%}");
+     background-image: url("{% static 'admin/img/food_bg.png'%}");
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
@@ -27,9 +27,9 @@
                  <br><br>
                  <div class="row">
                      <div class="container-fluid px-4 col-md-4">
-                         <h1 class="mt-4">Welcome to Aspire</h1>
+                         <h1 class="mt-4 text-light">Welcome to Aspire</h1>
                          <ol class="breadcrumb mb-4">
-                             <li class="breadcrumb-item active">We prioritize your health</li>
+                             <li class="breadcrumb-item active text-light">We prioritize your health</li>
                          </ol>
                          {% comment %} <a class= 'btn btn-light' href= "{% url 'dash' %}">go to dash</a> {% endcomment %}
                          <div class="row">
