datatable lookin good

--- a/NutriData/NutriData/aspire/static/admin/css/main.css
+++ b/NutriData/NutriData/aspire/static/admin/css/main.css
@@ -1047,3 +1047,33 @@ legend {
   color: var(--TEXT_LIGHT);
 }
 
+thead,
+tbody,
+tfoot,
+tr,
+td,
+th {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+}
+
+.table > thead, .dataTable-table > thead {
+  vertical-align: bottom;
+}
+
+.dataTable-table > tbody > tr > td,
+.dataTable-table > tbody > tr > th,
+.dataTable-table > tfoot > tr > td,
+.dataTable-table > tfoot > tr > th,
+.dataTable-table > thead > tr > td,
+.dataTable-table > thead > tr > th {
+  vertical-align: top;
+  padding: 0.5rem 0.5rem;
+}
+
+.dataTable-table > thead > tr > th {
+  vertical-align: bottom;
+  text-align: left;
+  border-bottom: none;
+}
