--- a/NutriData/NutriData/templates/aspire/saved.html
+++ b/NutriData/NutriData/templates/aspire/saved.html
@@ -161,9 +161,6 @@
                       </div>
                     </div>
                   </div>
-
-
-
                 </div>
               </div>
             </div>
@@ -179,77 +176,87 @@
   {% endfor %}
   <br><br>
 
-  <div class="card-body">
-    <table id="datatablesSimple">
-        <thead>
-            <tr>
-
-                <th>Starred</th>
-                <th>Recipe Name</th>
-                <th>Calories</th>
-                <th>Carbs</th>
-                <th>Protein</th>
-                <th>Fat</th>
-                <th class="w-10">View</th>
-                <th class="w-10">Delete</th>
 
 
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-
-                {% for recipe in recipe_obj_list %} 
-                <td>
-                  <div class="form-check">
-                    <form name="star-recipe" id="star-recipe" action="{% url 'star_recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
-                      {% csrf_token %}
-                      <input class="form-check-input" name="star-recipe" type="checkbox" value="starred" onchange="submit()"
-                      {% for recipe_user in recipe_user_list %}
-                        {% if recipe_user.recipe.recipeId == recipe.recipeId %}
-                          {% if recipe_user.starred == True %}
-                            checked
-                          {% endif %}
-                        {% endif %}
-                      {% endfor %}
-                      />
-                    </form>
-                  </div>
-                </td>
-                <td>{{recipe.title}}</td>
-                <td>{{recipe.calories}}</td>
-                <td>{{recipe.carbs}}</td>
-                <td>{{recipe.protein}}</td>
-                <td>{{recipe.fat}}</td>
-                <td class="history-table-row">
-                    <form name="form" action="{% url 'recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
-                        {% csrf_token %}
-                        <button class="btn btn-info">View</button>
-                    </form>
-                </td>
-                <td class="history-table-row" style="">
-                  <form name="form" action="{% url 'delete_recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
-                      {% csrf_token %}
-                      <button class="btn btn-info">Delete</button>
-                  </form>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div>
 
-  <script src="{% static 'admin/js/extention/choices.js'%}"></script>
-  <script>
-    var textPresetVal = new Choices('#choices-text-preset-values',
-    {
-      removeItemButton: true,
-    });
-    function replace_minmax(id, button){
-      document.getElementById(button).innerHTML = id
-    }
+<div class="row justify-content-sm-center align-items-md-center">
+  <div class="col-xl-10">
+      <div class="card mb-4">
+        <div class="card-body">
+          <table id="datatablesSimple" class="dataTable-table table">
+              <thead>
+                  <tr>
+                      <th>Starred</th>
+                      <th>Recipe Name</th>
+                      <th>Calories (kCal)</th>
+                      <th>Carbs (g)</th>
+                      <th>Protein (g)</th>
+                      <th>Fat (g)</th>
+                      <th class="w-10">View</th>
+                      <th class="w-10">Delete</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      {% for recipe in recipe_obj_list %} 
+                      <td>
+                        <div class="form-check">
+                          <form name="star-recipe" id="star-recipe" action="{% url 'star_recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
+                            {% csrf_token %}
+                            <input class="form-check-input" name="star-recipe" type="checkbox" value="starred" onchange="submit()"
+                            {% for recipe_user in recipe_user_list %}
+                              {% if recipe_user.recipe.recipeId == recipe.recipeId %}
+                                {% if recipe_user.starred == True %}
+                                  checked
+                                {% endif %}
+                              {% endif %}
+                            {% endfor %}
+                            />
+                          </form>
+                        </div>
+                      </td>
+                      <td>{{recipe.title}}</td>
+                      <td>{{recipe.calories}}</td>
+                      <td>{{recipe.carbs}}</td>
+                      <td>{{recipe.protein}}</td>
+                      <td>{{recipe.fat}}</td>
+                      <td class="history-table-row">
+                          <form name="form" action="{% url 'recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
+                              {% csrf_token %}
+                              <button class="btn btn-info">View</button>
+                          </form>
+                      </td>
+                      <td class="history-table-row" style="">
+                        <form name="form" action="{% url 'delete_recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
+                            {% csrf_token %}
+                            <button class="btn btn-info">Delete</button>
+                        </form>
+                      </td>
+                  </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+      </div>
+    </div>
+  </div>
+</div>
 
-  </script>
+
+
+
+
+<script src="{% static 'admin/js/extention/choices.js'%}"></script>
+<script>
+  var textPresetVal = new Choices('#choices-text-preset-values',
+  {
+    removeItemButton: true,
+  });
+  function replace_minmax(id, button){
+    document.getElementById(button).innerHTML = id
+  }
+
+</script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
