--- a/NutriData/NutriData/templates/aspire/index.html
+++ b/NutriData/NutriData/templates/aspire/index.html
@@ -15,23 +15,16 @@
      }
  </style>
  <body class="sb-nav-fixed sb-sidenav-toggled index-background">
-     
-     
-     {% comment %} <img src="{% static 'admin/img/bg_image.svg' %}" alt="" > {% endcomment %}
- 
- 
- 
      <div id="layoutSidenav">
          <div id="layoutSidenav_content">
              <main>
                  <br><br>
                  <div class="row">
                      <div class="container-fluid px-4 col-md-4">
-                         <h1 class="mt-4 text-light">Welcome to Aspire</h1>
+                         <h1 class="mt-4 text-light">Welcome to Aspire Dietary Solutions</h1>
                          <ol class="breadcrumb mb-4">
                              <li class="breadcrumb-item active text-light">We prioritize your health</li>
                          </ol>
-                         {% comment %} <a class= 'btn btn-light' href= "{% url 'dash' %}">go to dash</a> {% endcomment %}
                          <div class="row">
                              <div class="justity-content-between">
                          <a class= "btn btn-primary col-md-4" href = "{% url 'login' %}">login</a>
