--- a/NutriData/NutriData/templates/aspire/saved.html
+++ b/NutriData/NutriData/templates/aspire/saved.html
@@ -1,14 +1,3 @@
-<!-- 
-    Django Forms
-        button to star a recipe
-        button to create a folder
-        create folder text field that accept the name of the folder
-        add recipe to folder button
- -->
-
-
-
-
 {% extends 'base.html'%}
 {% load static %}
 {% block title %} Saved {% endblock %}
@@ -29,7 +18,7 @@
 
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-secondary">
   <!-- Navbar Brand-->
-  <a class="navbar-brand ms-5 navbar-text-sizing"><b>NutriNav</b></a>
+  <a class="navbar-brand ms-5 navbar-text-sizing"><b>Aspire</b></a>
   <!-- Sidebar Toggle-->
   <button class="btn btn-link btn-sm order-0 order-lg-0 " id="sidebarToggle" href="#!" ><i class="fas fa-bars"></i></button>
   <!-- Navbar Search-->
@@ -194,20 +183,38 @@
             </div>
           </div>
         </div>
-
       </fieldset>
     </form>
   </div>
+  <br>
 
-  {% for recipe in recipe_list  %}
-    <p><img src="{{recipe.2}}" alt="{{recipe.0}}"><a href="{% url 'recipe' user_id=user.id recipe_id=recipe.1%}">{{recipe.0}}</a></p>
-  {% endfor %}
-  <br><br>
+{% if search_recipe_list %}
+<div class="row justify-content-sm-center align-items-md-center">
+  <div class="col-xl-10">
+      <div class="card mb-4">
+        <div class="card-header">
+          <h4>Search Results</h4>
+        </div>
+        <div class="card-body">
+        {% for recipe in search_recipe_list  %}
+          {% if forloop.counter|add:"3"|divisibleby:4 %} <div class="row justify-content-center">{% endif %}
 
+          <div class="col-3">
+            <a href="{% url 'recipe' user_id=user.id recipe_id=recipe.1%}">
+              <div class="card mb-4">
+                <img src="{{recipe.2}}" alt="{{recipe.0}}">
+                {{recipe.0}}
+              </div>
+            </a>
+          </div>
 
-
+        {% if forloop.counter|divisibleby:4 %}</div>{% endif %}
+      {% endfor %}
+      </div>
+      </div>
+  </div>
 </div>
-
+{% endif %}
 
 <div class="row justify-content-sm-center align-items-md-center">
   <div class="col-xl-10">
@@ -260,7 +267,7 @@
                               <button class="btn btn-info">View</button>
                           </form>
                       </td>
-                      <td class="history-table-row" style="">
+                      <td class="history-table-row">
                         <form name="form" id="delete-form" action="{% url 'delete_recipe' user_id=user.id recipe_id=recipe.recipeId %}" method="Post">
                             {% csrf_token %}
                             <button class="btn btn-info"  type="button" onclick="confirm_delete()">Delete</button>
