--- a/NutriData/NutriData/templates/aspire/recipe.html
+++ b/NutriData/NutriData/templates/aspire/recipe.html
@@ -1,7 +1,6 @@
-<!-- no django forms required -->
-
 {% extends 'base.html' %}
 {% load static %}
+{% block title %} Recipe {% endblock %}
 {% block content %}
 
 
@@ -10,9 +9,10 @@
       background-image: url("{% static 'admin/img/food.jpg' %}");
     }
 </style>
+
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-secondary">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ms-5 navbar-text-sizing"><b>NutriNav</b></a>
+    <a class="navbar-brand ms-5 navbar-text-sizing"><b>Aspire</b></a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-0 order-lg-0 " id="sidebarToggle" href="#!" ><i class="fas fa-bars"></i></button>
     <!-- Navbar Search-->
@@ -25,39 +25,81 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="{% url 'saved' user_id=user.id %}">Search</a></li>
                 <li><a class="dropdown-item" href="{% url 'index'%}">Logout</a></li>
             </ul>
         </li>
     </ul>
-  </nav>
-
+</nav>
+<div class="row">
+<div class="col-auto justify-content-lg-start" style="margin-left: 1.15rem;">
     <h1>{{title}}</h1>
-    <ul>
-        <li>image</li>
-        <li>title</li>
-        <li>Whether or not it was favorited</li>
-    </ul>
+</div>
+<div class="col-auto justify-content-end" >
+    {% if saved == False %}
+    <form name="form" id="delete-form" action="{% url 'add_recipe' user_id=user.id recipe_id=recipe_id %}" method="Post">
+        {% csrf_token %}
+        <button style="margin-top: 1.5rem; margin-right: 1.5rem; justify-content: right;" class="btn btn-info">Add</button>
+    </form>
+    {% endif %} 
+</div>
+</div>
 
-    <h1>Ingredients</h1>
-    {% for key, value in ingredient_dict.items %}
-        <p>{{key}}</p>
-        <p>{{value}}</p>
-        <br>
-    {% endfor %}
-
-    <h1>Instructions</h1>
-    {% for key, value in instructions_dict.items %}
-    <p>{{key}}</p>
-    <p>{{value}}</p>
-    <br>
-{% endfor %}
+<div class="row" style="margin: .5rem;">
 
 
-<h1>Nutrients</h1>
-{% for key, value in nutrient_dict.items %}
-<p>{{key}}</p>
-<p>{{value}}</p>
-<br>
-{% endfor %}
+    <div class="col-4">
+        <div class="card recipe-card">
+            <img src="{{imgUrl}}" alt="{{recipe.title}}">
+        </div>
+    </div>
+
+    <div class="col-4">
+        <div class="card recipe-card" style="padding-left: 1rem;">
+            <h1>Nutrients</h1>
+            {% for key, value in nutrient_dict.items %}
+            <p>{{key}}: {{value}}</p>
+            {% endfor %}
+        </div>
+    </div>    
+
+
+
+    <div class="col-4">
+        <div class="card" style="padding-left: 1rem;">
+            <h1>Ingredients</h1>
+
+            {% for key, value in ingredient_dict.items %}
+                <p>{{key}}: {{value}} </p>
+            {% endfor %}            
+        </div>
+    </div>
+</div>
+
+
+<div class="row justify-content-sm-center align-items-md-center">
+    <div class="col-xl-10">
+        <div class="card mb-4">
+          <div class="card-header">
+            <h1>Instructions</h1>
+          </div>
+          <div class="card-body">
+            {% for key, value in instructions_dict.items %}
+            <p>Step {{key}}: {{value}}</p>
+            <br>
+            {% endfor %}
+          </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 {% endblock %}
